wms/static/css/main.css
/* variables */
:root {
    --colour-info: #2196f3;
    --colour-success: #4CAF50;
    --colour-warning: #FF9800;
    --colour-danger: #f44336;
}

*, *:before, *:after {
  box-sizing: inherit;
}

html,
body {
  padding: 0;
  margin: 0;
  max-width: 100vw;
  font-family: Arial, Helvetica, Sans-serif;
  box-sizing: border-box;
  overflow-x: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
span {
  margin: 0;
  line-height: 1;
  color: #424242;
}

.heading-1,
.heading-2,
.heading-3 {
  line-height: 1.2;
  padding: 1vw;
  display: block;
}


nav {
  width: 100vw;
  height: 10vh;
  display: flex;
  align-items: center;
  background-color: #eee;
}

.navItem {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  padding: 0 25px;
  text-decoration: none;
  font-size: 1rem;
}

.navItem.active,
.navItem:hover {
  background-color: #e0e0e0;
}

.search {
  padding: 0 30px 0 20px;
  flex: 1;
}

.searchbar {
  width: 100%;
  max-width: 60vw;
  float: right;
  border: none;
  padding: 10px;
  font-size: 1rem;
}

header {
  width: 100vw;
  height: 50vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.headerContent {
  width: 100vw;
  display: block;
}

.title,
.subtitle {
  text-align: center;
  display: block;
  font-weight: lighter;
}

.title {
  font-size: 6rem;
  font-weight: lighter;
}

.mainContent {
  width: 100vw;
  display: block;
}

.profile {
  border: 1px solid #000;
  display: block;
  margin: 1vw auto;
  text-align: center;
  padding: 1vw 3vw;
  width: 75vw;
}

footer {
  background-color: #455A64;
  display: block;
  height: 30vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer-content {
  text-align: center;
}

.copyright {
  display: block;
  text-align: center;
  color: #fff;
}

/* Button Styles */

.button {
  padding: 14px 16px;
  border: 3px solid;
  text-align: center;
  font-weight: bold;
  cursor: pointer;
  text-decoration: none;
  font-size: 1rem;
}

.button-login {
  margin: 1vw auto;
  width: 80%;
}

.button-info {
  color: #fff;
  background-color: var(--colour-info);
  border-color: var(--colour-info);
}

.button-info:hover {
  color: var(--colour-info);
  background-color: transparent;
}

.button-success{
  color: #fff;
  border-color: var(--colour-success);
  background-color: var(--colour-success);
}

.button-success:hover {
  color: var(--colour-success);
  background-color: transparent;
}

/* Box Styles */

.box {
  box-sizing: border-box;
  display: block;
  padding: 24px;
  text-align: center;
  margin: 5vw;
}

.box p {
  display: block;
  color: inherit;
}

.box-danger {
  background-color: var(--colour-danger);
  color: #fff;
}

.box-warning {
  background-color: var(--colour-warning);
  color: #fff;
}

.box-info {
  background-color: var(--colour-info);
  color: #fff;
}

/* Group Styles */

.group {
  display: grid;
  grid-column-gap: 1vw;
}

.group-two {
  grid-template-columns: repeat(2, 1fr);
}

/* Form Styles */

.form {
  display: block;
  background-color: #E0E0E0;
  width: 75vw;
  margin: 1vw auto;
  padding: 1vw;
  text-align: center;
}

/* Input Styles */

.input-text {
  border: none;
  padding: 10px;
  font-size: 1rem;
  width: 80%;
  margin: 1vw;
}

/* Link Styles */
.link {
  color: #03a9f4;
  text-decoration: none;
  cursor: pointer;
}

.link:hover {
  color: #0288D1;
  text-decoration: underline;
}

.link-footer {
  text-align: center;
}

